# imagineTime

./: .gitignore  CHANGELOG.md  README.md  webpack.config.js  yote-project.json
ImagineDrive/: Readme.md  imagine_drive.code-workspace
ImagineDrive/InstallerCustomAction/: CustomAction.cs  InstallerCustomAction.csproj  Resource1.Designer.cs  Resource1.resx  imagine_share.snk
ImagineDrive/InstallerCustomAction/Properties/: AssemblyInfo.cs
ImagineDrive/files/: CERTIFICATE.pfx  classdiagram.uxf  data_flow_diagram.uxf
ImagineDrive/flutter_dokan/: README.md  pubspec.yaml
ImagineDrive/flutter_dokan/lib/: flutter_dokan.dart
ImagineDrive/flutter_dokan/macos/: flutter_dokan.podspec
ImagineDrive/flutter_dokan/test/: flutter_dokan_test.dart
ImagineDrive/flutter_dokan/windows/: CMakeLists.txt  flutter_dokan_plugin.cpp
ImagineDrive/flutter_dokan/windows/dokan/: CMakeLists.txt
ImagineDrive/flutter_dokan/windows/dokan_hl/: dokan_mirror.cpp  dokan_mirror.h
ImagineDrive/flutter_dokan/windows/include/flutter_dokan/: flutter_dokan_plugin.h
ImagineDrive/flutter_dokan/windows/spdlog/: CMakeLists.txt
ImagineDrive/imagine_drive/: README.md  pubspec.yaml
ImagineDrive/imagine_drive/lib/: main.dart
ImagineDrive/imagine_drive/windows/imagine_share/: CMakeLists.txt
ImagineDrive/imagine_drive/windows/imagine_share/debug/: dokan1.sys
ImagineDrive/imagine_drive/windows/imagine_share/release/: ImagineShare.dll.config  init.bat  uninit.bat
ImagineDrive/imagine_drive_server/: app.js  app.yaml  package-lock.json  package.json  readme.md
ImagineDrive/imagine_icon_overlay/: ImagineShare.cs  SocketHandler.cs  imagine_icon_overlay.csproj  imaginedriveshell.sln  packages.config
ImagineDrive/imagine_icon_overlay_testconsole/: App.config  Program.cs  imagine_icon_overlay_testconsole.csproj  imagine_icon_overlay_testconsole_TemporaryKey.pfx
ImagineDrive/installer/: Bundle.wxs  installer.sln  installer.wixproj
desktop/: README.md  package-lock.json  package.json
desktop/src/: index.css  index.js
docs/: tutorial.md
docs/server/: index.md
server/: .gitignore  Dockerfile  README.md  cron-process.js  knexfile.js  layout.pug  package-lock.json  yote.js
server/cronJobs/: signatureRequestExpiry.js
server/emailTemplates/: client-reminder.html  clientUserInvitation.html  notification-email.html  outlook-email-attachment.html  outlook-email-attachment2.html  staffInvitation.html
server/global/: brandingName.js  constants.js
server/migrationTemplates/: create_thing.js  thing_add_fields.js
server/migrations/: 20190303103202_create_addresses.js  20190304103504_create_phonenumbers.js  20190416161815_create_users.js  20190416161818_create_products.js  20190604101909_create_firms.js  20190604102050_create_clients.js  20190604104249_create_tags.js  20190604104432_create_clientusers.js  20190604104742_create_staff.js  20190604104905_create_staffclients.js  20190604105056_create_files.js  20190604151512_create_clientworkflows.js  20190604151514_clientworkflow_add_clientworkflow.js  20190604191558_create_clienttasks.js  20190606125206_addresses_add_refs.js  20190606125432_phone_numbers_add_refs.js  20190607110214_create_notes.js  20190607110229_create_clientNotes.js  20190610184200_create_activities.js  20190610184202_create_clientactivities.js  20190610184205_create_notifications.js  20190610184543_create_clienttaskresponses.js  20190610184549_create_clientworkflowtemplates.js  20190610184954_create_subscriptions.js  20190617152024_firm_add_subscription.js  20190718113628_firm_add_file.js  20190724123547_create_clientposts.js  20190729140110_clienttasks_add_files.js  20190731105710_create_clientpostreplies.js  20190806151455_create_sharelinks.js  20190812153912_create_clienttasktemplates.js  20190820115833_clientworkflowtemplate_add_clientworkflowtemplate.js  20190830100945_firm_subdomain_to_domain.js  20190916121755_tag_add_firm.js  20190919104836_clients_add_identifier.js  20191030155012_clienttask_add_assuresign.js  20191112151409_create_quicktasks.js  20191120123354_users_add_sendNotifEmails.js  20191202144000_sharelink_add_quicktasks.js  20191216105158_firm_add_eSigAccess.js  (+194 more)
server/notes/: postgres-notes.md  sprint-2-notes.md
server/resources/: searchUtil.js
server/scripts/: uploadReactBundle.js
server/seeds/: products.js  users.js
server/static/: client_bulk_import_template_csv.csv  default-template.docx  staff_bulk_import_template_csv.csv
server/utils/: removeAllClientData.js  returnEnvDetails.js  saveToCsv.js  utilWrapper.js
web/: .eslintrc.json  .gitignore  app.js.jsx  desktop.js.jsx  outlook.js.jsx  package.json  uploadbox.js.jsx  webpack.prod.config.js
web/config/: adminNavItems.js  adminResourceRoutes.js  configureStore.js  constants.js  licenseKeys.js  msConfig.js  portalResourceRoutes.js  practiceResourceRoutes.js  prodDomains.js  resourceReducers.js  resourceRoutes.js  routes.js.jsx  yote.scss
web/resources/: Lists.js.jsx  ListsRouter.js.jsx
(+1412 files in other folders)
